Can sell positions now, reworked buying to make it simpler to sell

--- a/package.json
+++ b/package.json
@@ -17,5 +17,6 @@
   "bugs": {
     "url": "https://github.com/Treevs/mavis-web/issues"
   },
-  "homepage": "https://github.com/Treevs/mavis-web#readme"
+  "homepage": "https://github.com/Treevs/mavis-web#readme",
+  "dependencies": {}
 }
