--- a/mavis-frontend/package.json
+++ b/mavis-frontend/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
+    "react-vis": "^1.11.7",
     "store": "^2.0.12"
   },
   "scripts": {
